[gd_scene load_steps=3 format=3 uid="uid://c7hpk1tl0kpkh"]

[ext_resource type="Script" uid="uid://bphbr6kqv60o5" path="res://scripts/browser/frigo_choice.gd" id="1_do0gi"]
[ext_resource type="Texture2D" uid="uid://4b6m4ar4lk5i" path="res://assets/images/Browser/choice_buton.png" id="2_c2w5h"]

[node name="ActionChoice" type="Node2D"]
script = ExtResource("1_do0gi")

[node name="ChoiceButon1" type="Sprite2D" parent="."]
position = Vector2(236, 275)
scale = Vector2(0.23036332, 0.34366578)
texture = ExtResource("2_c2w5h")

[node name="ChoiceButon2" type="Sprite2D" parent="ChoiceButon1"]
position = Vector2(1490.8516, 2.0980835e-05)
scale = Vector2(0.99963886, 1.0032054)
texture = ExtResource("2_c2w5h")

[node name="ChoiceButon3" type="Sprite2D" parent="ChoiceButon1/ChoiceButon2"]
position = Vector2(1490.8516, 2.0980835e-05)
scale = Vector2(0.99963886, 1.0032054)
texture = ExtResource("2_c2w5h")

[node name="Label" type="Label" parent="ChoiceButon1/ChoiceButon2/ChoiceButon3"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.171
offset_left = -723.04254
offset_top = -369.5451
offset_right = -726.841
offset_bottom = -219.42711
theme_override_font_sizes/font_size = 100
text = "choix 3
"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="ChoiceButon1/ChoiceButon2/ChoiceButon3"]
self_modulate = Color(2.5210483, 2.5210483, 2.5210483, 1)
offset_left = -723.04254
offset_top = -369.54507
offset_right = 722.49994
offset_bottom = 369.54514
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ChoiceButon1/ChoiceButon2/ChoiceButon3"]
offset_left = -720.6008
offset_top = -235.69409
offset_right = 720.6007
offset_bottom = 369.54517
theme_override_font_sizes/font_size = 100
text = "Un Frigo supersonic  96 dB Classe Energétique C"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="ChoiceButon1/ChoiceButon2"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.171
offset_left = -723.04254
offset_top = -369.5451
offset_right = -726.841
offset_bottom = -219.42711
theme_override_font_sizes/font_size = 100
text = "choix 2
"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="ChoiceButon1/ChoiceButon2"]
self_modulate = Color(2.5210483, 2.5210483, 2.5210483, 1)
offset_left = -723.04254
offset_top = -369.54507
offset_right = 722.49994
offset_bottom = 369.54514
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ChoiceButon1/ChoiceButon2"]
offset_left = -720.6008
offset_top = -235.69409
offset_right = 720.6007
offset_bottom = 369.54517
theme_override_font_sizes/font_size = 100
text = "Super Frigo 2000 Giga Freezer Classe Énergétique Z"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="ChoiceButon1"]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.171
offset_left = -723.04254
offset_top = -369.5451
offset_right = -726.841
offset_bottom = -219.42711
theme_override_font_sizes/font_size = 100
text = "choix 1
"
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="ChoiceButon1"]
self_modulate = Color(2.5210483, 2.5210483, 2.5210483, 1)
offset_left = -723.04254
offset_top = -369.54507
offset_right = 722.49994
offset_bottom = 369.54514
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="ChoiceButon1"]
offset_left = -720.6008
offset_top = -235.69409
offset_right = 720.6007
offset_bottom = 369.54517
theme_override_font_sizes/font_size = 100
text = "Frigo EthicalGood Ecoconception Classe Énergétique A+++"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
offset_left = 70.0
offset_top = 56.0
offset_right = 1089.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Le frigo de l'entreprise est tombé en panne. Quel classe énergétique doit-on privilégier ?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
uppercase = true
